# xds-rs

./: Cargo.toml
api/: Cargo.toml  build.rs  protodep.toml
api/src/helloworld/: client.rs
